Aula Model Concluida

--- a/AulasAspNetMVC/appsettings.json
+++ b/AulasAspNetMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AulasAspNetMVCContext": "Server=(localdb)\\mssqllocaldb;Database=AulasAspNetMVC.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
